[package]
name = "indexer-example"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.11.0-beta.2"
actix-web = "=4.0.0-beta.6"
actix-http = "=3.0.0-beta.6"
actix-tls = "=3.0.0-beta.5"
actix_derive = "=0.6.0-beta.1"
funty = "=1.1.0"
bson = "1.1.0"
clap = "3.0.0-beta.1"
dotenv = "0.15.0"
openssl-probe = { version = "0.1.2" }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing-subscriber = "0.2.4"
bigdecimal = "0.1.2"
chrono = "0.4.13"
mongodb = "2.0.0-alpha"
near-indexer = { git = "https://github.com/nearprotocol/nearcore", rev="5a6fb2bd28eca69d38a1f85e7f5fe520cdedbca5" }
neard = { git = "https://github.com/nearprotocol/nearcore", rev="5a6fb2bd28eca69d38a1f85e7f5fe520cdedbca5" }
qstring = "0.7.2"
